fixed visiblity of login page

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -224,7 +224,7 @@ label {
 .input {
   width: 100%;
   height: 40px;
-  background: #dadada;
+  background: #252525;
   padding: 10px;
   border: none;
   margin-top: 5%;
